WCAG contrast checker fixes

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,9 +13,8 @@ header {
   position: relative;
 }
 
-.header:hover{
+.header:hover {
   color: #70158f;
-
 }
 
 .logo {
@@ -35,21 +34,20 @@ header {
   color: #70158f;
 }
 
-
 .log-in {
-    color: #340a42;
-    text-decoration: none;
-    white-space: nowrap;
-    font-family: "Bebas Neue", sans-serif;
-    letter-spacing: 1.2px;
-    background: none;
-    border: none;
-    padding: 0.5rem 1rem;
+  color: #340a42;
+  text-decoration: none;
+  white-space: nowrap;
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 1.2px;
+  background: none;
+  border: none;
+  padding: 0.5rem 1rem;
 }
 
 .sign-up:hover,
 .log-in:hover {
-    color: #70158f;
+  color: #70158f;
 }
 .fas {
   color: #373736;
@@ -89,11 +87,9 @@ nav.nav-head {
   gap: 1rem;
 }
 
-
 .hamburger-icon {
   display: none;
 }
-
 
 @media (max-width: 1180px) {
   .hamburger-icon {
@@ -140,7 +136,6 @@ nav.nav-head {
   nav.nav-menu a {
     font-size: 2rem;
     padding: 0.5rem 0;
-    
   }
   .cart-text {
     display: inline;
@@ -149,7 +144,7 @@ nav.nav-head {
     color: #340a42;
     letter-spacing: 1.2px;
   }
-  .cart-icon{
+  .cart-icon {
     display: none;
   }
   .sign-up,
@@ -157,8 +152,6 @@ nav.nav-head {
     font-size: 2rem;
     padding: 0.5rem 0;
   }
-
- 
 }
 
 /* Global styles */
@@ -217,8 +210,8 @@ p {
   font-size: 1rem;
 }
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 h4,
@@ -744,7 +737,7 @@ a {
   font-family: "Inter", sans-serif;
   font-size: 1rem;
   font-weight: 400;
-  color: #aaa;
+  color: #3c3a3a;
   text-decoration: line-through;
 }
 
@@ -1333,7 +1326,7 @@ a {
 
 .copyright-text {
   margin: 0;
-  color: #654c6e;
+  color: #4e3f54;
   font-size: 1rem;
   font-family: "Inter", sans-serif;
 }
